--- a/app/src/main/res/layout/activity_post_new.xml
+++ b/app/src/main/res/layout/activity_post_new.xml
@@ -6,16 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".post_new">
 
-
-    <Button
-        android:id="@+id/post_write"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout5"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="글작성"
+        android:background="@drawable/backgroudn_list"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="8dp"
+            android:text="Create Post"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:textStyle="italic" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/post_write"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:background="?attr/selectableItemBackground"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="8dp"
+            android:text="POST" />
+
+    </LinearLayout>
+
 
     <EditText
         android:id="@+id/editText_post"
@@ -24,18 +53,20 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="2dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="72dp"
         android:background="@null"
         android:ems="10"
         android:gravity="top"
-        android:hint="글쓰기"
+        android:hint="Write it down."
         android:isScrollContainer="true"
         android:maxHeight="84dp"
         android:textSize="17.6sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
+
+
 
 </android.support.constraint.ConstraintLayout>
