--- a/app/src/main/res/layout/posts_item.xml
+++ b/app/src/main/res/layout/posts_item.xml
@@ -30,12 +30,12 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_account_circle_black_18dp" />
+        />
 
     <TextView
         android:id="@+id/item_content"
         android:layout_width="0dp"
-        android:layout_height="96dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -56,7 +56,12 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent">
 
-
+        <LinearLayout
+            android:id="@+id/good_linear"
+            android:background="?attr/selectableItemBackground"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
@@ -66,13 +71,12 @@
             android:text="좋아요" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:layout_weight="0.5"
+            android:id="@+id/good_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_weight="0.5"
-            android:gravity="left"
-            />
+            android:layout_marginStart="10dp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView5"
@@ -95,8 +99,8 @@
 
     <ImageView
         android:id="@+id/good"
-        android:layout_width="37dp"
-        android:layout_height="33dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginStart="64dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -106,8 +110,8 @@
     <ImageView
         android:visibility="gone"
         android:id="@+id/good2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginStart="64dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -117,10 +121,10 @@
 
     <ImageView
         android:id="@+id/comment_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_gravity="right"
-        android:layout_marginEnd="88dp"
+        android:layout_marginEnd="72dp"
         android:layout_marginBottom="4dp"
         android:background="?attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -135,7 +139,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@android:color/background_dark">
+        android:background="#A8A8A8">
 
 
     </LinearLayout>
@@ -149,6 +153,35 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/item_name_content"
         app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/text_no"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/item_name_content"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:background="?attr/selectableItemBackground"
+        android:id="@+id/memu_item_button"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/baseline_more_vert_black_18dp"/>
+
+    <ImageView
+        android:visibility="gone"
+        android:id="@+id/image_change_notice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/profile_my"
+        app:layout_constraintTop_toTopOf="@+id/profile_my"
+        app:srcCompat="@android:drawable/presence_online" />
 
 
 </android.support.constraint.ConstraintLayout>
